# deepen-grade

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: example-ci-gate.yml
action/: action.yml
scripts/: droid_to_lerobot.py
src/deepen_grade/: __about__.py  __init__.py  citations.py  cli.py  grading.py
src/deepen_grade/checks/: __init__.py  base.py  calibration_sanity.py  episode_quality.py  hygiene.py  plausibility.py
src/deepen_grade/ingest/: __init__.py  base.py  detect.py  exceptions.py  lerobot_reader.py  mcap_reader.py  ros_common.py  ros_reader.py
src/deepen_grade/report/: __init__.py  badge.py  json_report.py  share.py  terminal.py
tests/: conftest.py  test_calibration_sanity.py  test_citations.py  test_cli.py  test_episode_quality.py  test_golden_corpus.py  test_grading.py  test_hygiene.py  test_ingest_readers.py  test_plausibility.py  test_terminal.py
tests/fixtures/: generate.py  scenario.py
tests/fixtures/data/: sample.mcap  sample_ros1.bag
tests/fixtures/data/sample_lerobot/data/chunk-000/: episode_000000.parquet  episode_000001.parquet
tests/fixtures/data/sample_lerobot/meta/: info.json
tests/fixtures/data/sample_ros2/: metadata.yaml  sample_ros2.db3
