[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "deepen-grade"
version = "0.2.0"
description = "Free, local CLI that grades robot-learning datasets (MCAP/rosbag/LeRobot) on hygiene, episode quality, and calibration sanity -- every metric traced to a named paper."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Deepen AI", email = "oss@deepen.ai" }]
keywords = [
    "robotics",
    "robot-learning",
    "mcap",
    "rosbag",
    "lerobot",
    "data-quality",
    "imitation-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "numpy>=1.24",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
# .mcap ingestion (ROS 2 default bag format)
mcap = [
    "mcap>=1.1.1",
    "mcap-ros2-support>=0.5.3",
]
# .bag (ROS1) / .db3 (ROS2 sqlite) ingestion -- pure-python, no ROS install required
ros = [
    "rosbags>=0.10.4",
]
# LeRobotDataset v3 ingestion (local path or HuggingFace repo-id) -- reads the
# parquet/json dataset directly; deliberately does NOT depend on the `lerobot`
# training package (torch, etc.) to keep installs light and fast.
lerobot = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "huggingface_hub>=0.24",
]
# everything
all = [
    "deepen-grade[mcap,ros,lerobot]",
]
dev = [
    "deepen-grade[all]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/deepen-ai/deepen-grade"
Repository = "https://github.com/deepen-ai/deepen-grade"
Issues = "https://github.com/deepen-ai/deepen-grade/issues"
"Deepen AI" = "https://deepen.ai"
"Full Audit" = "https://evaluate.deepen.ai"

[project.scripts]
deepen = "deepen_grade.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deepen_grade"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
